--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "body-parser": "*",
     "bower": "^1.3.12",
     "ejs": "*",
-    "express": "4.4.5",
+    "express": "*",
     "request": "^2.65.0"
   },
   "engines": {
